# systrayrun

./: .gitignore  CMakeLists.txt  CMakeProject1.cpp  README.md  vcpkg.json
